tests/ui/typeck/non-termination-while-reporting-ambiguity-error-issue-1156615.next.stderr
error[E0283]: type annotations needed
  --> $DIR/non-termination-while-reporting-ambiguity-error-issue-1156615.rs:28:10
   |
LL |         .cartesian_product(Family::Distribution::single_value())
   |          ^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `U` declared on the method `cartesian_product`
LL |
LL |         .flatten::<u64>()
   |          ------- type must be known at this point
   |
   = note: the type must implement `Distribution<u64>`
note: required by a bound in `Distribution::flatten`
  --> $DIR/non-termination-while-reporting-ambiguity-error-issue-1156615.rs:22:16
   |
LL |     fn flatten<T>(self) -> <Self::Family as DistributionFamily>::Distribution<T>
   |        ------- required by a bound in this associated function
LL |     where
LL |         Value: Distribution<T>;
   |                ^^^^^^^^^^^^^^^ required by this bound in `Distribution::flatten`
help: consider specifying the generic arguments
   |
LL |         .cartesian_product::<T, U>(Family::Distribution::single_value())
   |                           ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
